--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,10 +1,10 @@
-#root{
+.root{
     -fx-background-color: #ffcda5;
 }
 
 
 
-#checkbutton {
+.checkbutton {
     -fx-text-fill: black;
     -fx-font-size: 16;
     -fx-font-family: "Arial Black";
@@ -13,12 +13,33 @@
 }
 
 .button {
-    -fx-border-color: white;
-    -fx-border-width: 0;
-    -fx-background-radius: 0;
-    -fx-background-color: grey;
-    -fx-font-size: 24;
-    -fx-font-family: monospace;
-    -fx-font-weight: bold;
-    -fx-text-fill: black;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+
 }
+
+.button1 {
+    -fx-border-radius: 8px;
+    -fx-background-color: #ffcc84;
+    -fx-border-color: #000000;
+    -fx-font-size: 36;
+}
+
+.button2 {
+    -fx-border-radius: 8px;
+    -fx-background-color: #ffcc84;
+    -fx-border-color: #000000;
+    -fx-font-size: 36;
+
+
+}
+.button3 {-fx-border-radius: 8px;}
+.button4 {-fx-border-radius: 12px;}
+.button5 {-fx-border-radius: 50%;}
